# TIIGRSimu

./: .gitignore  CMakeLists.txt  launch.py  run.mac  run1.mac  setup.sh  vis.mac  vis1.mac
analysis/: plot.py  plotAll.py  test.py
exec/: TIIGR.cxx
include/: G4OpBoundaryProcess.hh  G4OpticalProcessIndex.hh  G4OpticalSurface.hh  ParticleMemory.hh  RootWriter.hh  Settings.hh  TIIGRActionInitialization.hh  TIIGRDetectorConstruction.hh  TIIGREventAction.hh  TIIGRPhysicsList.hh  TIIGRPrimaryGeneratorAction.hh  TIIGRRunAction.hh  TIIGRSteppingAction.hh  TIIGRTrackingAction.hh  TrackInformation.hh
src/: RootWriter.cc  TIIGRActionInitialization.cc  TIIGRDetectorConstruction.cc  TIIGREventAction.cc  TIIGRPhysicsList.cc  TIIGRPrimaryGeneratorAction.cc  TIIGRRunAction.cc  TIIGRSteppingAction.cc  TIIGRTrackingAction.cc
